--- a/client/package.json
+++ b/client/package.json
@@ -23,6 +23,7 @@
     "react-circular-progressbar": "^2.0.3",
     "react-countdown": "^2.2.1",
     "react-countup": "^4.3.3",
+    "react-device-detect": "^1.17.0",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^3.4.1",
