--- a/client/package.json
+++ b/client/package.json
@@ -30,6 +30,7 @@
     "styled-components": "^5.1.1",
     "typescript": "^3.9.9",
     "use-wallet": "^0.8.1",
+    "dotenv": "^8.2.0",
     "web3": "^1.3.3"
   },
   "scripts": {
