--- a/client/package.json
+++ b/client/package.json
@@ -31,7 +31,10 @@
     "typescript": "^3.9.9",
     "use-wallet": "^0.8.1",
     "dotenv": "^8.2.0",
-    "web3": "^1.3.3"
+    "web3": "^1.3.3",
+    "@material-ui/core": "^4.11.3",
+    "@material-ui/icons": "^4.11.2",
+    "@material-ui/lab": "*"
   },
   "scripts": {
     "start": "react-scripts start",
