--- a/client/package.json
+++ b/client/package.json
@@ -4,6 +4,9 @@
   "private": true,
   "dependencies": {
     "@binance-chain/bsc-use-wallet": "^0.8.1",
+    "@material-ui/core": "^4.11.3",
+    "@material-ui/icons": "^4.11.2",
+    "@material-ui/lab": "*",
     "@types/debounce": "^1.2.0",
     "@types/jest": "^26.0.9",
     "@types/node": "^14.0.27",
@@ -14,6 +17,7 @@
     "axios": "^0.20.0",
     "bignumber.js": "^9.0.0",
     "debounce": "^1.2.0",
+    "dotenv": "^8.2.0",
     "ethers": "^5.0.31",
     "graphql": "^14.5.6",
     "graphql-tag": "^2.10.1",
@@ -26,15 +30,11 @@
     "react-device-detect": "^1.17.0",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "^3.4.1",
+    "react-scripts": "^3.4.4",
     "styled-components": "^5.1.1",
     "typescript": "^3.9.9",
     "use-wallet": "^0.8.1",
-    "dotenv": "^8.2.0",
-    "web3": "^1.3.3",
-    "@material-ui/core": "^4.11.3",
-    "@material-ui/icons": "^4.11.2",
-    "@material-ui/lab": "*"
+    "web3": "^1.3.3"
   },
   "scripts": {
     "start": "react-scripts start",
