--- a/server/package.json
+++ b/server/package.json
@@ -27,7 +27,8 @@
         "dotenv": "^8.2.0",
         "web3": "^1.5.1",
         "ethereumjs-tx": "^2.1.2",
-        "form-data": "^3.0.0"
+        "form-data": "^3.0.0",
+        "bignumber.js": "^9.0.0"
     },
     "devDependencies": {
         "jest": "^26.6.3",
