--- a/client/package.json
+++ b/client/package.json
@@ -29,6 +29,7 @@
     "react-countup": "^4.3.3",
     "react-device-detect": "^1.17.0",
     "react-dom": "^16.13.1",
+    "react-google-recaptcha": "^2.1.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^3.4.4",
     "styled-components": "^5.1.1",
@@ -61,6 +62,7 @@
   "devDependencies": {
     "@types/numeral": "0.0.28",
     "@types/react-dom": "^16.9.8",
+    "@types/react-google-recaptcha": "^2.1.2",
     "@types/react-router-dom": "^5.1.5",
     "@types/styled-components": "^5.1.2"
   },
