--- a/client/src/pbr/lib/abi/masterLaunchpad.json
+++ b/client/src/pbr/lib/abi/masterLaunchpad.json
@@ -92,6 +92,26 @@
             },
             {
                 "internalType": "uint256",
+                "name": "percentClaim4",
+                "type": "uint256"
+            },
+            {
+                "internalType": "uint256",
+                "name": "claimTime4",
+                "type": "uint256"
+            },
+            {
+                "internalType": "uint256",
+                "name": "percentClaim5",
+                "type": "uint256"
+            },
+            {
+                "internalType": "uint256",
+                "name": "claimTime5",
+                "type": "uint256"
+            },
+            {
+                "internalType": "uint256",
                 "name": "pid",
                 "type": "uint256"
             }
@@ -158,6 +178,11 @@
             },
             {
                 "internalType": "uint256",
+                "name": "maxSpecialPurchase",
+                "type": "uint256"
+            },
+            {
+                "internalType": "uint256",
                 "name": "totalCap",
                 "type": "uint256"
             },
@@ -174,11 +199,6 @@
             {
                 "internalType": "uint256",
                 "name": "minimumTokenSoldout",
-                "type": "uint256"
-            },
-            {
-                "internalType": "uint256",
-                "name": "minimumStakeAmount",
                 "type": "uint256"
             }
         ],
@@ -225,6 +245,26 @@
             {
                 "internalType": "uint256",
                 "name": "PercentClaim3",
+                "type": "uint256"
+            },
+            {
+                "internalType": "uint256",
+                "name": "ClaimTime4",
+                "type": "uint256"
+            },
+            {
+                "internalType": "uint256",
+                "name": "PercentClaim4",
+                "type": "uint256"
+            },
+            {
+                "internalType": "uint256",
+                "name": "ClaimTime5",
+                "type": "uint256"
+            },
+            {
+                "internalType": "uint256",
+                "name": "PercentClaim5",
                 "type": "uint256"
             }
         ],
@@ -607,6 +647,26 @@
             },
             {
                 "internalType": "uint256",
+                "name": "percentClaim4",
+                "type": "uint256"
+            },
+            {
+                "internalType": "uint256",
+                "name": "claimTime4",
+                "type": "uint256"
+            },
+            {
+                "internalType": "uint256",
+                "name": "percentClaim5",
+                "type": "uint256"
+            },
+            {
+                "internalType": "uint256",
+                "name": "claimTime5",
+                "type": "uint256"
+            },
+            {
+                "internalType": "uint256",
                 "name": "pid",
                 "type": "uint256"
             }
@@ -650,6 +710,11 @@
             },
             {
                 "internalType": "uint256",
+                "name": "maxSpecialPurchase",
+                "type": "uint256"
+            },
+            {
+                "internalType": "uint256",
                 "name": "totalCap",
                 "type": "uint256"
             },
@@ -670,17 +735,7 @@
             },
             {
                 "internalType": "uint256",
-                "name": "minimumTokenSoldout",
-                "type": "uint256"
-            },
-            {
-                "internalType": "uint256",
                 "name": "pooltype",
-                "type": "uint256"
-            },
-            {
-                "internalType": "uint256",
-                "name": "minimumStakeAmount",
                 "type": "uint256"
             }
         ],
