--- a/server/package.json
+++ b/server/package.json
@@ -16,19 +16,20 @@
     "license": "ISC",
     "dependencies": {
         "bcryptjs": "2.4.3",
+        "bignumber.js": "^9.0.0",
         "body-parser": "^1.18.3",
         "cors": "^2.8.5",
+        "dotenv": "^8.2.0",
         "ejs": "^3.1.6",
+        "ethereumjs-tx": "^2.1.2",
         "express": "^4.17.1",
         "express-jwt": "^6.0.0",
         "express-session": "^1.17.1",
         "express-validator": "^6.3.1",
-        "jsonwebtoken": "^8.4.0",
-        "dotenv": "^8.2.0",
-        "web3": "^1.5.1",
-        "ethereumjs-tx": "^2.1.2",
         "form-data": "^3.0.0",
-        "bignumber.js": "^9.0.0"
+        "jsonwebtoken": "^8.4.0",
+        "request": "^2.88.2",
+        "web3": "^1.5.1"
     },
     "devDependencies": {
         "jest": "^26.6.3",
