--- a/client/package.json
+++ b/client/package.json
@@ -6,11 +6,10 @@
     "@binance-chain/bsc-use-wallet": "^0.8.1",
     "@material-ui/core": "^4.11.3",
     "@material-ui/icons": "^4.11.2",
-    "@material-ui/lab": "*",
+    "@material-ui/lab": "^5.0.0-alpha.44",
     "@types/debounce": "^1.2.0",
     "@types/jest": "^26.0.9",
     "@types/node": "^14.0.27",
-    "@types/react": "^16.9.46",
     "apollo-cache-inmemory": "^1.6.3",
     "apollo-client": "^2.6.4",
     "apollo-link-http": "^1.5.16",
@@ -61,9 +60,10 @@
   },
   "devDependencies": {
     "@types/numeral": "0.0.28",
-    "@types/react-dom": "^16.9.8",
+    "@types/react": "^16.14.32",
+    "@types/react-dom": "^16.9.16",
     "@types/react-google-recaptcha": "^2.1.2",
-    "@types/react-router-dom": "^5.1.5",
+    "@types/react-router-dom": "^5.2.0",
     "@types/styled-components": "^5.1.2"
   },
   "prettier": {
