--- a/client/package.json
+++ b/client/package.json
@@ -3,13 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@binance-chain/bsc-use-wallet": "^0.8.1",
     "@material-ui/core": "^4.11.3",
     "@material-ui/icons": "^4.11.2",
     "@material-ui/lab": "^5.0.0-alpha.44",
     "@types/debounce": "^1.2.0",
     "@types/jest": "^26.0.9",
     "@types/node": "^14.0.27",
+    "@web3modal/ethereum": "^2.2.2",
+    "@web3modal/react": "^2.2.2",
     "apollo-cache-inmemory": "^1.6.3",
     "apollo-client": "^2.6.4",
     "apollo-link-http": "^1.5.16",
@@ -17,28 +18,29 @@
     "bignumber.js": "^9.0.0",
     "debounce": "^1.2.0",
     "dotenv": "^8.2.0",
-    "ethers": "^5.0.31",
+    "ethers": "^5",
     "graphql": "^14.5.6",
     "graphql-tag": "^2.10.1",
     "numeral": "^2.0.6",
-    "react": "^16.13.1",
+    "react": "^17.0.2",
     "react-apollo": "^3.1.1",
     "react-circular-progressbar": "^2.0.3",
     "react-countdown": "^2.2.1",
     "react-countup": "^4.3.3",
     "react-device-detect": "^1.17.0",
-    "react-dom": "^16.13.1",
+    "react-dom": "^17.0.2",
     "react-google-recaptcha": "^2.1.0",
+    "react-redux": "^7.2.3",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^3.4.4",
     "styled-components": "^5.1.1",
-    "typescript": "^3.9.9",
-    "use-wallet": "^0.8.1",
-    "web3": "^1.3.3"
+    "typescript": "^4.6.3",
+    "wagmi": "^0.12.10",
+    "web3": "^1.3.5"
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "CI= GENERATE_SOURCEMAP=false react-scripts build",
+    "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "deploy": "yarn build && cp ./build/index.html ./build/200.html && surge ./build polkabridge.org"
@@ -46,21 +48,15 @@
   "eslintConfig": {
     "extends": "react-app"
   },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  },
+  "browserslist": [
+    ">0.2%",
+    "not dead",
+    "not op_mini all"
+  ],
   "devDependencies": {
     "@types/numeral": "0.0.28",
     "@types/react": "^16.14.32",
+    "@ethersproject/experimental": "^5.4.0",
     "@types/react-dom": "^16.9.16",
     "@types/react-google-recaptcha": "^2.1.2",
     "@types/react-router-dom": "^5.2.0",
