--- a/server/package.json
+++ b/server/package.json
@@ -1,43 +1,44 @@
 {
-    "name": "launchpad-server",
-    "version": "1.0.0",
-    "description": "Launchpad server",
-    "main": "server.js",
-    "scripts": {
-        "start": "node server",
-        "server": "nodemon server",
-        "dev": "nodemon",
-        "test": " jest --watch"
-    },
-    "jest": {
-        "testEmvironment": "node"
-    },
-    "author": "",
-    "license": "ISC",
-    "dependencies": {
-        "bcryptjs": "2.4.3",
-        "bignumber.js": "^9.0.0",
-        "body-parser": "^1.18.3",
-        "cors": "^2.8.5",
-        "dotenv": "^8.2.0",
-        "ejs": "^3.1.6",
-        "ethereumjs-tx": "^2.1.2",
-        "express": "^4.17.1",
-        "express-jwt": "^6.0.0",
-        "express-session": "^1.17.1",
-        "express-validator": "^6.3.1",
-        "form-data": "^3.0.0",
-        "jsonwebtoken": "^8.4.0",
-        "request": "^2.88.2",
-        "web3": "^1.5.1"
-    },
-    "devDependencies": {
-        "jest": "^26.6.3",
-        "nodemon": "^2.0.7",
-        "supertest": "^6.1.3",
-        "eslint": "^7.22.0",
-        "eslint-config-prettier": "^8.1.0",
-        "eslint-plugin-prettier": "^3.3.1",
-        "prettier": "^2.2.1"
-    }
+  "name": "test",
+  "version": "1.0.0",
+  "description": "Launchpad server",
+  "main": "server.js",
+  "scripts": {
+    "start": "node server",
+    "server": "nodemon server",
+    "dev": "nodemon",
+    "test": " jest --watch"
+  },
+  "jest": {
+    "testEmvironment": "node"
+  },
+  "author": "",
+  "license": "ISC",
+  "dependencies": {
+    "bcryptjs": "2.4.3",
+    "bignumber.js": "^9.0.0",
+    "body-parser": "^1.18.3",
+    "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
+    "ejs": "^3.1.6",
+    "ethereumjs-tx": "^2.1.2",
+    "ethers": "^6.13.4",
+    "express": "^4.17.1",
+    "express-jwt": "^6.0.0",
+    "express-session": "^1.17.1",
+    "express-validator": "^6.3.1",
+    "form-data": "^3.0.0",
+    "jsonwebtoken": "^8.4.0",
+    "request": "^2.88.2",
+    "web3": "^1.5.1"
+  },
+  "devDependencies": {
+    "eslint": "^7.22.0",
+    "eslint-config-prettier": "^8.1.0",
+    "eslint-plugin-prettier": "^3.3.1",
+    "jest": "^26.6.3",
+    "nodemon": "^2.0.7",
+    "prettier": "^2.2.1",
+    "supertest": "^6.1.3"
+  }
 }
